# Computational-Simulation-GBAR-CERN

./: .deleteLines.cpp.swp  .detector.hh.swp  CMakeLists.txt  ConstructionParameters.cc  ConstructionParameters.hh  Output.cc  RunParameters.cc  RunParameters.hh  Task3.cc  action.cc  action.hh  construction.cc  construction.hh  constructionTest.cc  constructionTest.hh  createTuples.cc  detector.cc  detector.hh  electricField.cc  electricField.hh  elementField.cc  elementField.hh  event.hh  export.stlZone.Identifier  generator.cc  generator.hh  globalField.cc  globalField.hh  lage5114@sol-login.fysik.su.se  magAndEField.csvZone.Identifier  physics.cc  run.cc  run.hh  runMan.cc  runMan.hh  runManager.cc  runManager.hh  stepping.cc  stepping.hh  testDistancesTargetOrigin.cc  (+14 more)
Matlab visualization/: NoPosDist.m  StefanBoltzmann.m  Untitled.fig  drawCircle.m  eDepBar.m  eDepTest.m  findCircle.m  mainTask1.m  mainTask2.m  mainTask3.asv  mainTask3.m  myAvg.m  myLinReg.m  noElectronsEstimation.m  plotRatioScore.m  plotWall.asv  plotWall.m  plotWallScore.m  plot_Annihis.m  plot_P_avgEnergy.m  plot_P_sigmaPos.m  plot_Sample4Fields.m  plot_Sample4ModeratorHeight.m  plot_Sample4distTargetOrigin.m  plot_TarDiNeAllWalls.m  plot_avgE_P.m  plot_avgE_noPos.m  plot_barE_radii.m  plot_dModerator_P.m  plot_dModerator_noPos.m  plot_distTarMod_P.m  plot_distTarMod_noPos.m  plot_distTargetOrigin.m  plot_eDep_noElectrons.m  plot_modEnd_noAnnihi.m  plot_ratio.m  plot_ratioDiNe.asv  plot_ratioDiNe.m  plot_ratioDipoleNeon.m  plot_ratioScore.m  (+30 more)
